# louter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PLAN_RL.md  README.md  TEST_PLAN.md  build.rs  install.sh  louter.example.toml
distill/: compress.py  export.py  ingest_conversations.py  requirements.txt  run_distill.sh  train.py
distill/rl/: evaluate.py  export_episodes.py  generate_rollouts.py  requirements.txt  reward_rollouts.py  run_rl.sh  score_tool_calls.py  score_with_judge.py  serve_hf.py  serve_vllm.sh  train_grpo.py  train_opd.py
migrations/: 001_initial.sql  003_training_samples.sql  004_key_routing_mode.sql  005_rl_episodes.sql
olares/: Chart.yaml  OlaresManifest.yaml  package.sh  values.yaml
olares/templates/: deployment.yaml
src/: config.rs  dynamic_config.rs  error.rs  feedback.rs  main.rs  server.rs  session.rs
src/api/: admin.rs  auto_configure.rs  chat.rs  distill.rs  docs.rs  mod.rs  models.rs  proxy.rs  static_files.rs
src/db/: mod.rs  schema.rs
src/providers/: anthropic.rs  azure.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs  sse.rs  tool_call_normalizer.rs
src/router/: hybrid_router.rs  mod.rs  smart_router.rs  static_router.rs
src/types/: chat.rs  mod.rs  provider.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/pages/: Dashboard.tsx  Distill.tsx  Keys.tsx  Providers.tsx  Setup.tsx  Usage.tsx
