[package]
name = "louter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
bytes = "1"
tokio-stream = "0.1"
hex = "0.4"
url = "2"
